2013-02-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (cve-details): Change to hide empty sections if
	no CVE data is found. Change to show "CVSS: None" if only CVSS data is
	missing.
	(cpe-details): Change to hide "Reported vulnerabilities" when CPE is not
	found.
	(ovaldef-details): Change to hide empty sections if no ovaldef data is
	found and show an info message instead. Add h1 tag to
	"Repository history: None".
	(dfn_cert_adv-details): Change to hide empty sections if no advisory
	data is found and show an info message instead.

2013-02-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (result-detailed): Fix conditions for references
	boxes to appear.

2013-02-18  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (ref_cert_list, nvt, result-detailed): Add support
	for warning elements in CERT advisory lists.

2013-02-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Clear credentials on allocation so that
	params is NULL when exec_omp_get fails with bogus command name.

2013-02-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (nvt): Change to hide empty sections completely.

2013-02-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (dfn_cert_adv-details): Change to make more
	consistent with other details pages. Get name (advisory ID) from
	raw data.

2013-02-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (ovaldef-details): Change to make more consistent
	with other details pages.

2013-02-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (ref_xref_list): Change text "Other:" to appear
	in same line as first xref entry.
	(nvt): Move references to new "References" table.
	Move "CVSS base", "Risk factor" and tag "cvss_base_vector" to new table
	"Vulnerability scoring".
	Move script tags "affected", "insight", "impact", "solution" to new